--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "pre-commit": "npm run lint"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
     "codelyzer": "^5.0.0",
     "firebase-tools": "^7.12.1",
     "fuzzy": "^0.1.3",
+    "husky": "^4.2.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.4.0",
