--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner",
-    "pre-commit": "npm run lint"
+    "sonar": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +21,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@commitlint/cli": "^8.3.5",
     "bootstrap": "^4.4.1",
     "firebase": "^7.12.0",
     "ngx-bootstrap": "^5.5.0",
@@ -62,5 +62,11 @@
   "engines": {
     "node": "10.16.0",
     "npm": "6.13.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run commit-msg",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
