--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "pre-commit": "npm run lint && npm run commit-msg",
+    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "private": true,
   "dependencies": {
@@ -62,11 +64,5 @@
   "engines": {
     "node": "10.16.0",
     "npm": "6.13.7"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run commit-msg",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   }
 }
